--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.11",
     "@types/node": "^15.3.0",
     "nodemon": "^2.0.7",
@@ -27,9 +28,12 @@
     "apollo-server-express": "^2.24.0",
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
+    "connect-redis": "^5.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
