--- a/package.json
+++ b/package.json
@@ -25,10 +25,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.5",
-    "@mikro-orm/core": "^4.5.5",
-    "@mikro-orm/migrations": "^4.5.5",
-    "@mikro-orm/postgresql": "^4.5.5",
     "apollo-server-express": "^2.24.0",
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
@@ -42,6 +38,7 @@
     "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
   "mikro-orm": {
